Rezepte hinzugefügt Allgemeine Überarbeitungen

--- a/Kapitel_1.tex
+++ b/Kapitel_1.tex
@@ -666,8 +666,8 @@ Niedrig				& 120 - 175 °C					& 8 - 10 Sekunden	\\
 	Ich werde euch den Oberflächengrill von Beefbox (siehe Abbildung~\vref{fig:Beefbox}) vorstellen, da ich dieses 
 	Gerät selbst besitze. Der Oberfächengrill ist mit 
 	einen 
-	Keramikbrenner ausgerüstet, der Oben in der Beefbox sitzt. In der Regel sind 
-	die Benner bei den Standalone-Geräten oben 
+	Keramikbrenner ausgerüstet, der oben in der Beefbox sitzt. In der Regel sind 
+	die Brenner bei den Standalone-Geräten oben 
 	angebracht, so dass kein Fett auf den Brenner tropfen kann. Je nach Grillgut 
 	kann der Abstand mittels des Einschubs 
 	verändert werden. Ich 
@@ -689,7 +689,7 @@ Niedrig				& 120 - 175 °C					& 8 - 10 Sekunden	\\
 	passieren, dass sich Gas in der Garkammer sammelt und bei Entzündung eine 
 	Flamme aus der Garkammer schlägt. Die 
 	Gefahr dabei ist, dass während des 
-	Zündvorgangs in die Garkammer geschaut wird. Das kann schon mal 
+	Zündvorgangs gerne in die Garkammer geschaut wird. Das kann schon mal 
 	Augenbrauen kosten, oder richtige Verletzungen 
 	verursachen. Daher bitte Vorsicht walten 
 	lassen. Ansonsten gelten die selben Regeln wie beim Gasgrill.
@@ -747,7 +747,7 @@ Niedrig				& 120 - 175 °C					& 8 - 10 Sekunden	\\
 	Der Smokey Mountain Water Smoker von Weber besteht aus einem Kessel, 
 	Zwischenstück und einem Deckel. Im Inneren ist 
 	ein Kohlerost mit Holzkohle, 
-	Wasserschale und zwei übereinander liegende Grillroste für das Gargut zu 
+	eine Wasserschale und zwei übereinander liegende Grillroste für das Gargut zu 
 	finden.
 
 \subsection{Anfeuern des Water Smokers}
