--- a/Kapitel_2.tex
+++ b/Kapitel_2.tex
@@ -226,7 +226,14 @@ Kurz bevor das Fleisch die gewünschte Kerntemperatur (ich empfehle 55°C bis
 der Heckbrenner des Grills angestellt und auf die höchste Stufe 
 eingestellt, damit die Kruste kross wird und eine schöne Farbe bekommt. 
 Aufpassen!
-Das geht sehr schnell.
+Das geht sehr schnell. 
+
+Das Fleisch ein wenig ruhen lassen, aber nicht einschlagen.
+Durch die entstehende Feuchtigkeit wenn es eingeschlagen oder in eine 
+Thermobox gelegt wird, würde die schöne Kräuterkruste eine wenig
+aufweichen (siehe Abbildung~\vref{fig:roastbeefmitkraeuterkruste}). 
+Das Fleisch in dünne Scheiben schneiden und mit Halb und Halb Knödel
+sevieren.
 
 \begin{figure}[htbp]
 	\centering
@@ -234,7 +241,7 @@ Das geht sehr schnell.
 		\centering
 		\includegraphics[width=1\linewidth]{pics/roastbeefmitkraeuterkruste}
 		\captionof{figure}{Roastbeef vom Keramikgrill}
-		\label{fig:Roastbeef}
+		\label{fig:roastbeefmitkraeuterkruste}
 	\end{minipage}
 \end{figure}
 \newpage
@@ -449,14 +456,14 @@ rein. Das Chili ist für Erwachsene und nix für schlechte Nerven.
 	\item 1/2 TL Koriandersamen
 	\item 1 Prise Zimt
 	\item Salz \& Pfeffer
-	\item 200 ml Wasser
+	\item 300 ml Hühnerfond oder Hühnerbrühe
 \end{itemize}
 
 \paragraph{Zubereitung}
 
 Piment, Kardamom und Koriandersamen in einer Pfanne anrösten bis Knackgeräusche zu hören sind. Abkühlen lassen und fein mörsern oder in einer Gewürzmühle mahlen. Danach mit den anderen Gewürzen, bis auf Salz und Pfeffer, vermischen und zur Seite stellen.
 Die Zwiebeln, die Chilis und den Knoblauch in Würfel schneiden und im Olivenöl andünsten. Zwischenzeitlich die Hühner- oder Putenbrust und die Paprikaschote in Würfel (ca. 1 cm Kantenlänge) schneiden und das Fleisch im Sonnenblumenöl scharf und kurz anbraten.
-Die angedünsteten Zutaten zu dem Fleisch geben, nochmals bei starker Hitze rösten um Röststoffe zu entwickeln. Den Tequila oder Brandy zugeben, sobald der Alkohol verkocht ist mit dem Wasser ablöschen. Den Mais, die Berberitze  und den Paprika zugeben, das Ganze 15 Minuten bei mittlerer Hitze ohne Deckel köcheln lassen.  
+Die angedünsteten Zutaten zu dem Fleisch geben, nochmals bei starker Hitze rösten um Röststoffe zu entwickeln. Den Tequila oder Brandy zugeben, sobald der Alkohol verkocht ist mit dem Fond oder der Brühe ablöschen. Den Mais, die Berberitze  und den Paprika zugeben, das Ganze 15 Minuten bei mittlerer Hitze ohne Deckel köcheln lassen.  
 Die Bohnen und die Gewürze zugeben und alles nochmals 15 Minuten ohne Deckel köcheln lassen. Mit Salz und Pfeffer abschmecken.
 Das Chili in einer Schüssel servieren und Weißbrot dazu reichen.
 \newpage
@@ -475,7 +482,7 @@ Das Chili in einer Schüssel servieren und Weißbrot dazu reichen.
 	\item 1- 2 Rouladen pro Person
 	\item 1 EL Senf pro Roulade
 	\item 1/4 Gewürzgurke pro Roulade (längs geviertelt)
-	\item 1/2 kleine Zwiebel Pro Roulade
+	\item 1/2 kleine Zwiebel pro Roulade
 	\item 1-2 Scheiben Speck oder Bacon pro Roulade
 	\item Salz \& Pfeffer
 	\item Paprikapulver
@@ -626,7 +633,7 @@ ebenfalls Hickory oder Apfel
 
 \paragraph{Zubereitung der Glasur:}
 
-Die Marmelade durch ein Sieb streichen (um die Kerne zu entfernen) 
+Die Marmelade durch ein Sieb streichen (um die Kerne zu entfernen). 
 Danach alle Zutaten in einem Topf vermengen und ca. 5 Minuten köcheln.
 
 \paragraph{Zubereitung der Spare ribs:}
@@ -660,7 +667,7 @@ einreißt.
 
 \subsection{Pulled pork, low \& slow}
 Pulled Pork gehört ebenso wie die Spare ribs und das Beef brisket zu 
-dem "<Holly trinity of BBQ">. Wie beim Beef brisket ist auch hier einen 
+dem "<Holly trinity of BBQ">. Wie beim Beef brisket ist auch hier eine
 Menge Geduld gefragt. Denn bekanntlich ist Geduld der beste Koch. Das 
 Pulled pork ist ein Klassiker und wird traditionell in Burger buns serviert. Allerdings ist 
 es kein Sakrileg wenn das Pulled Pork mit Colslaw und baked beans oder 
@@ -704,7 +711,7 @@ handelt es sich um Schweinenacken an den noch ein Stück von der
 Schulter  inklusive komplettes Schulterblatt anhängt, das so genannte 
 Horn.
 Das Boston Butt wird großzügig mit dem gewählten Rub einreiben und 30 
-Minuten ruhen lassen (besser über Nacht) Die Grills bzw. Water Smoker 
+Minuten ruhen lassen (besser über Nacht). Die Grills bzw. Water Smoker 
 auf ca. 110°C einstellen, das Fleisch auf die indirekte Zone legen und für 
 12 Stunden räuchern. Danach das Fleisch vom Grill nehmen und in eine 
 Edelstahl- oder Auflaufform legen. Den Apfelsaft dazu geben und mit 
@@ -1053,7 +1060,9 @@ herzlichst.
 
 \paragraph{Zubereitung}
 
-Den Gasgrill auf ca. 200°C vorheizen. Den Rost mit Trennspray einsprühen,  beim Einsprühen gibt es Stichflammen, da die Brenner eingeschaltet sind. Die Sardinen salzen und ca. eine Stunde liegen lassen. Danach die Sardinen auf den Grill legen und von jeder Seite ca. 3 Minuten, je nach Größe,  grillen. 
+Den Gasgrill auf ca. 200°C vorheizen. Den Rost mit Trennspray einsprühen,  beim Einsprühen gibt es Stichflammen, da die Brenner 
+eingeschaltet sind. Die Sardinen salzen und ca. eine Stunde liegen lassen. Danach die Sardinen auf den Grill legen und von jeder Seite ca. 3 
+Minuten, je nach Größe,  grillen. 
 
 \begin{figure}[htbp]
 	\centering
