--- a/Kapitel_3.tex
+++ b/Kapitel_3.tex
@@ -1,7 +1,11 @@
 %!TEX root = Vorlage_Buch.tex
 \chapter{Gemüse und Pilze die unterschätzten Darsteller in der Küche}\label{Chapter3}
 
-\lettrine[lines=3]{G}{emüse mach Spass, wetten dass?} In diesem Kapitel möchte ich euch zeigen, dass Gemüse zu Schade ist um als Beilage oder zu Kaninchenfutter degradiert wird sondern richtiges Soulfood, nicht nur für Veggies, ist. Es ist bunt, es ist vielseitig, es ist knackig (wenn es nicht getötet wird) und es ist vor allem vielseitig. Lassen wir uns auf das Experiment Gemüse ein.  In diesem Kapitel werden auch Pilze betrachtet, sie gehören allerdings weder zur Flora noch zur Fauna, sondern bilden ihr eigenes Reich. Ich habe die Pilze trotzdem hier aufgenommen, das ein eigenes Kapitel für diese Buch nicht gewinnbringend wäre.
+\lettrine[lines=3]{G}{emüse mach Spass, wetten dass?} In diesem Kapitel möchte ich euch zeigen, dass Gemüse zu Schade ist um als Beilage 
+oder zu Kaninchenfutter degradiert wird sondern richtiges Soulfood, nicht nur für Veggies, ist. Es ist bunt, es ist vielseitig, es ist knackig (wenn 
+es nicht getötet wird) und es ist vor allem vielseitig. Lassen wir uns auf das Experiment Gemüse ein.  In diesem Kapitel werden auch Pilze 
+betrachtet, sie gehören allerdings weder zur Flora noch zur Fauna, sondern bilden ihr eigenes Reich. Ich habe die Pilze trotzdem hier 
+aufgenommen, das ein eigenes Kapitel für diese Buch nicht gewinnbringend wäre.
 
 \section{Gemüse als Beilage}
 
@@ -115,7 +119,7 @@ dazu reichen.
 	\item Salz \& Pfeffer
 	\item 1 Schuss süße Sahne
 	\item 1 Kartoffel
-	\item 1 Brioche-Bun
+	\item 1 Brioche-Bun (Kapitel~\ref{Chapter4} \vref{BriocheBun})
 	\item Salat
 	\item Orangen-Mayonnaise
 \end{itemize}
