--- a/Kapitel_4.tex
+++ b/Kapitel_4.tex
@@ -26,6 +26,13 @@ werden.
 
 \subsection{Eine echt leckere Pizza}
 
+\paragraph{Geräte}
+
+\begin{itemize}[noitemsep]
+	\item Holzbackofen
+	\item Kenwood Cooking Chef
+\end{itemize}
+
 \paragraph{Zutaten Teig}
 
 \begin{itemize}[noitemsep]
@@ -92,3 +99,94 @@ und bei mindestens 300°C im Holzbackofen backen.
 	\end{minipage}
 \end{figure}
 \newpage
+
+\subsection{Brioche Buns}\label{BriocheBun}
+
+\paragraph{Geräte}
+
+\begin{itemize}[noitemsep]
+	\item Holzbackofen
+	\item Kenwood Cooking Chef
+\end{itemize}
+
+\paragraph{Zutaten}
+
+\begin{itemize}[noitemsep]
+	\item 3 EL Milch (3,8\% Fett), Zimmertemperatur
+	\item 40 g Rohrzucker
+	\item 380 g Mehl, Type 550
+	\item 1/2 Würfel frische Hefe
+	\item 1 großes Ei
+	\item 35 g warme Butter
+	\item 3 TL Mehl, Type 405
+	\item 9 g Himalaya-Salz
+	\item 240 ml Wasser
+\end{itemize}
+
+\paragraph{Zubereitung}
+
+Milch auf ca. 45°C erwärmen, in eine Schüssel geben 1 EL Zucker und 1 EL Mehl
+zugeben. Die Hefe hinein bröseln und alles verrühren. 10 Minuten stehen lassen
+bis sich Blasen bilden. 
+Die weiche Butter mit beiden Mehlsorten und Salz mischen bis eine streuselartige
+Masse entsteht. Anschließend die Hefe-Milch-Mischung, Wasser und das Ei
+langsam ein arbeiten. Die Küchenmaschine auf die mittlere Stufe einstellen und 
+den Teig für 6 Minuten kneten. Den Teig abdecken und 1-2 Stunden stehen lassen
+bis sich das Volumen verdoppelt hat (Stockgare).
+Nach der Stockgare den Teig auf der leicht bemehlten Arbeitsfläche in 8 gleiche Stücke
+teilen. Die 8 Teile in schöne Kugeln formen, auf ein Backblech mit ca. 5 cm Abstand legen
+und eine Stunde liegen lassen, bis das Volumen verdoppelt hat (Stückgare).
+
+Wenn die Buns aufgegangen sind mit einer Mischung aus 1 Eiklar, 1 EL Wasser und einer 
+Prise Salz einstreichen. Dazu einen Silikonpinsel benutzen. Die Buns mit einem beliebigen
+Topping bestreuen und 15-20 Minuten bei 200°C im Holzbackofen backen, bis die 
+Oberfläche goldbraun ist.
+
+\subsection{Kartoffel-Bun}
+
+\paragraph{Geräte}
+
+\begin{itemize}[noitemsep]
+	\item Holzbackofen
+	\item Kenwood Cooking Chef
+\end{itemize}
+
+\paragraph{Zutaten}
+
+\begin{itemize}[noitemsep]
+	\item 300 ml Milch (3,8\% Fett)
+	\item 8 g Trockenhefe
+	\item 70 g brauner Zucker
+	\item 310 g Mehl, Type 405
+	\item 200 g gekochte mehlige Kartoffeln (vom Vortag)
+	\item 250 g Mehl, Ty<pe 550
+	\item 9 g Himalaya-Salz
+	\item 1 großes Ei
+	\item 80 g Butter, weich
+\end{itemize}
+
+\paragraph{Zubereitung}
+
+Die Milch auf ca. 45°C erwärmen, in eine Schüssel geben 1 EL Zucker, 1 EL Mehl
+und die Trockenhefe zugeben und alles verrühren. 10 Minuten stehen lassen
+bis sich Blasen bilden. 
+Die gekochten und geschälten Kartoffeln mit einer Gabel zerdrücken, bis keine groben 
+Stücke mehr vorliegen. Zusammen mit der Hefe-Milch-Mischung, 
+dem gesamten Mehl, dem Zucker, dem Salz und dem Ei in eine Küchenmaschine geben. 
+Auf langsamer Stufe kneten bis ein grober Teig entsteht. Jetzt die Butter nach und nach 
+einarbeiten, dabei die Küchenmaschine auf mittlere Stufe stellen. Anschließend die
+Küchenmaschine auf die höchste Stufe  einstellen und den Teig für 10 Minuten kneten.
+Den Teig in der Schüssel belassen, abdecken und für 1 bis 1,5 Stunden stehen lassen. 
+Das Volumen sollte sich bis dahin verdoppelt haben.
+
+Den Teig aus der Schüssel nehmen und kneten, dass die Luft entweicht. Dann Teig
+mit einem Nudelholz zu einer rechteckigen Flächen ausrollen und zu einem Zylinder 
+zusammenrollen. Denn Vorgang wiederholen und dann in 12 gleichgroße Stücke teilen.
+
+Die 12 Teile in schöne Kugeln formen, auf ein Backblech mit ca. 5 cm Abstand legen
+und eine Stunde liegen lassen, bis sich das Volumen verdoppelt hat (Stückgare).
+
+Wenn die Buns aufgegangen sind mit einer Mischung aus 1 Eiklar, 1 EL Wasser und einer 
+Prise Salz einstreichen. Dazu einen Silikonpinsel benutzen. Die Buns mit einem beliebigen
+Topping bestreuen und 15-20 Minuten bei 200°C im Holzbackofen backen, bis die 
+Oberfläche goldbraun ist.
