--- a/Kapitel_5.tex
+++ b/Kapitel_5.tex
@@ -4,12 +4,15 @@
 Freien. Fast alles was in der Küche im Haus zubereitet werden kann, kann auch in der Außenküche zubereitet werden.  Deshalb werde ich 
 hier auch einige Rezepte vorstellen die von Oma gekocht wurden, bevor es jemanden gab der Barbecue (/ˈbɑː.bɪ.kjuː/)  aussprechen konnte.
 
-Unter dem Punkt "`Ä Gosch voll"' werden wir Rezepte für kleine Happen kennenlernen.  Diese Häppchen sind mundgerecht und können als Amuse Gueule, 
-zwischen den Gängen, als Dessert oder einfach als Fingerfood gereicht werden. In diesen Happen wird alles verpackt, das benötigt wird um Kleines ganz groß werde zu 
+Unter dem Punkt "`Ä Gosch voll"' werden wir Rezepte für kleine Happen kennenlernen.  Diese Häppchen sind mundgerecht und können als 
+Amuse Gueule, 
+zwischen den Gängen, als Dessert oder einfach als Fingerfood gereicht werden. In diesen Happen wird alles verpackt, das benötigt wird um 
+Kleines ganz groß werde zu 
 lassen. Also gehen wir es an.  
 
 \section{Ä Gosch voll,}
-besser beschreiben kann man die Kleinigkeiten nicht. Es ist wie im wirklichen Leben, die kleinen Dinge machen die meiste Arbeit, sorgen aber auch für den Größten 
+besser beschreiben kann man die Kleinigkeiten nicht. Es ist wie im wirklichen Leben, die kleinen Dinge machen die meiste Arbeit, sorgen aber 
+auch für den Größten 
 Wow-Effekt. Daher bitte ein wenig Zeit einplanen, oder so viel möglich am Vortag vorbereiten. 
 
 \subsection{Tiroler Schlutzkrapfen}
@@ -138,7 +141,9 @@ Kapitel~\ref{Chapter6} \vref{SalsaAlbondigas}) anrichten und mit gehackter Peter
 	\item Wasser nach Bedarf
 \end{itemize}
 
-Die Wachtelbrüstchen über Nacht mit einer Marinade aus Zitronensaft, Bio-Lavendel und Wasser marinieren. Die Brüstchen trocken tupfen, mit Salz und Pfeffer würzen und  auf der Plancha bei ca. 200°C anbraten. Parallel dazu die Wachtelspiegeleier zubereiten. Alles auf einem Gourmetlöffel anrichten und mit ein wenig Lavendel garnieren.
+Die Wachtelbrüstchen über Nacht mit einer Marinade aus Zitronensaft, Bio-Lavendel und Wasser marinieren. Die Brüstchen trocken tupfen, mit 
+Salz und Pfeffer würzen und  auf der Plancha bei ca. 200°C anbraten. Parallel dazu die Wachtelspiegeleier zubereiten. Alles auf einem 
+Gourmetlöffel anrichten und mit ein wenig Lavendel garnieren.
 
 \subsection{ Gegrillte Wachtelkeulen mit Chili-Butter }
 
@@ -159,7 +164,10 @@ Die Wachtelbrüstchen über Nacht mit einer Marinade aus Zitronensaft, Bio-Laven
 	\item Pulver vom Kaschmir-Chili
 \end{itemize}
 
-Die Wachtelkeulen mit Kräuterbutter einreiben und die Kräuterbutter auch unter der Haut verteilen. Die Keulen werden auf der Plancha scharf angegrillt bis sich Röststoffe bilden, danach auf der indirekten Zone fertig gegart. Die geklärte Butter auf schwacher Hitze schmelzen und das Chili-Pulver einrühren. Das Pulver der Kaschmir-Chilis sorgt für eine tolle rote Färbung und hat einen guten  Geschmack bei moderater Schärfe. Die Keulen auf einem kleinen Teller anrichten und mit der Chili-Butter beträufeln.
+Die Wachtelkeulen mit Kräuterbutter einreiben und die Kräuterbutter auch unter der Haut verteilen. Die Keulen werden auf der Plancha scharf 
+angegrillt bis sich Röststoffe bilden, danach auf der indirekten Zone fertig gegart. Die geklärte Butter auf schwacher Hitze schmelzen und das 
+Chili-Pulver einrühren. Das Pulver der Kaschmir-Chilis sorgt für eine tolle rote Färbung und hat einen guten  Geschmack bei moderater Schärfe. 
+Die Keulen auf einem kleinen Teller anrichten und mit der Chili-Butter beträufeln.
 
 \subsection{Jakobsmuschel an Orangenmayonnaise}
 
@@ -184,7 +192,12 @@ Die Wachtelkeulen mit Kräuterbutter einreiben und die Kräuterbutter auch unter
 
 \paragraph{Zubereitung}
 
-Gasgrill auf ca. 200°C aufheizen. Die geklärte Butter in einer kleinen Kasserolle erwärmen. 6 Blätter der Minze zugeben um die Butter zu aromatisieren. Die Jakobsmuscheln mit Zitronensaft beträufeln, mit Salz und Pfeffer würzen und auf die Plancha legen. Unter dessen die Chicorée-Blätter waschen und mit  Küchenpapier trocken tupfen. Ein Tupfer der Mayonnaise mit einer Dosierflasche auf die Chicorée-Blätter aufbringen. Die Jakobsmuscheln wenden sobald sie eine bräunliche Farbe angenommen haben und braten bis sie leicht gebräunt und in der Mitte noch glasig sind. Auf den Chicorée-Blättern anrichten, mit der aromatisierten, geklärten Butter beträufeln und mit einem Blatt der Minze garnieren.
+Gasgrill auf ca. 200°C aufheizen. Die geklärte Butter in einer kleinen Kasserolle erwärmen. 6 Blätter der Minze zugeben um die Butter zu 
+aromatisieren. Die Jakobsmuscheln mit Zitronensaft beträufeln, mit Salz und Pfeffer würzen und auf die Plancha legen. Unter dessen die 
+Chicorée-Blätter waschen und mit  Küchenpapier trocken tupfen. Ein Tupfer der Mayonnaise mit einer Dosierflasche auf die Chicorée-Blätter 
+aufbringen. Die Jakobsmuscheln wenden sobald sie eine bräunliche Farbe angenommen haben und braten bis sie leicht gebräunt und in der 
+Mitte noch glasig sind. Auf den Chicorée-Blättern anrichten, mit der aromatisierten, geklärten Butter beträufeln und mit einem Blatt der Minze 
+garnieren.
 \newpage
 
 \subsection{Frühstück}
@@ -264,7 +277,10 @@ Fruchtsaft.
 
 \paragraph{Zubereitung}
 
-Die ungeschälten Kartoffeln kaltem Wasser waschen und gegebenenfalls abbürsten. Danach die Kartoffeln in ca. 1,5 cm dicke Spalten schneiden. Spalten mit einer reichlichen Menge Olivenöl beträufeln und mischen. Mein Bratkartoffelgewürz, Rezept siehe Kapitel~\ref{Chapter6} \vref{Bratkartoffelgewürz}, darüber streuen und alles nochmals mischen, bis die Kartoffeln gleichmäßig gewürzt sind. Auf dem Kamado-Grill mit einem indirekten Setting bei ca. 200°C grillen bis sie gleichmäßig gebräunt und knusprig sind, ca. 30 -35 Minuten.
+Die ungeschälten Kartoffeln kaltem Wasser waschen und gegebenenfalls abbürsten. Danach die Kartoffeln in ca. 1,5 cm dicke Spalten 
+schneiden. Spalten mit einer reichlichen Menge Olivenöl beträufeln und mischen. Mein Bratkartoffelgewürz, Rezept siehe 
+Kapitel~\ref{Chapter6} \vref{Bratkartoffelgewürz}, darüber streuen und alles nochmals mischen, bis die Kartoffeln gleichmäßig gewürzt sind. 
+Auf dem Kamado-Grill mit einem indirekten Setting bei ca. 200°C grillen bis sie gleichmäßig gebräunt und knusprig sind, ca. 30 -35 Minuten.
 
 \subsection{Kartotten-Kartoffelstampfbratlinge}
 
@@ -286,7 +302,12 @@ Die ungeschälten Kartoffeln kaltem Wasser waschen und gegebenenfalls abbürsten
 
 \paragraph{Zubereitung}
 
-Kartoffeln und Karotten schälen, abwaschen und in Stücke schneiden. Die Kartoffeln und Karotten zusammen in Salzwasser auf den Seitenbrenner des Gasgrills kochen bis sie gar sind.  Den Gasgrill mit der Plancha ausrüsten und diese aufheizen ca. 200 °C. Die Zwiebeln in Ringe schneiden und auf der Plancha dünsten bis sie weich sind und eine braune Farbe angenommen haben. Zwischenzeitlich das Wasser der Kartoffeln und Karotten abschütten und alles mit einem Kartoffelstampfer grob zerkleinern. Je eine mittlere Schöpfkelle auf die Plancha geben und ein wenig flach drücken, bis sie eine rundliche Forma angenommen haben. Von beiden Seiten anbraten bis sie bräunlich geröstet sind auf einer Platte anrichten die gedünsteten Zwiebeln darüber verteilen und servieren.
+Kartoffeln und Karotten schälen, abwaschen und in Stücke schneiden. Die Kartoffeln und Karotten zusammen in Salzwasser auf den 
+Seitenbrenner des Gasgrills kochen bis sie gar sind.  Den Gasgrill mit der Plancha ausrüsten und diese aufheizen ca. 200 °C. Die Zwiebeln in 
+Ringe schneiden und auf der Plancha dünsten bis sie weich sind und eine braune Farbe angenommen haben. Zwischenzeitlich das Wasser der 
+Kartoffeln und Karotten abschütten und alles mit einem Kartoffelstampfer grob zerkleinern. Je eine mittlere Schöpfkelle auf die Plancha geben 
+und ein wenig flach drücken, bis sie eine rundliche Forma angenommen haben. Von beiden Seiten anbraten bis sie bräunlich geröstet sind auf 
+einer Platte anrichten die gedünsteten Zwiebeln darüber verteilen und servieren.
 
 \subsection{Schwenkkartoffeln}
 
@@ -307,7 +328,10 @@ Kartoffeln und Karotten schälen, abwaschen und in Stücke schneiden. Die Kartof
 
 \paragraph{Zubereitung}
 
-Drillinge mit Schale kochen. Sobald sie gar sind kurz abkühlen lassen und schälen. Drillinge erkalten lassen, am Besten ist es wenn sie am Vortag vorbereitet werden. Die Kartoffeln längs halbieren und mit der Kräuterbutter auf die vorgeheizte Planca (ca. 200°C) geben und solange unter ständigem wenden braten bis Sie von allen Seiten goldbraun sind, siehe Abbildung~\vref{fig:Schwenkkartoffeln}. Mit Salz abschmecken und servieren. 
+Drillinge mit Schale kochen. Sobald sie gar sind kurz abkühlen lassen und schälen. Drillinge erkalten lassen, am Besten ist es wenn sie am 
+Vortag vorbereitet werden. Die Kartoffeln längs halbieren und mit der Kräuterbutter auf die vorgeheizte Planca (ca. 200°C) geben und solange 
+unter ständigem wenden braten bis Sie von allen Seiten goldbraun sind, siehe Abbildung~\vref{fig:Schwenkkartoffeln}. Mit Salz abschmecken 
+und servieren. 
 \newpage
 
 \begin{figure}[htbp]
