--- a/Kapitel_7.tex
+++ b/Kapitel_7.tex
@@ -264,7 +264,7 @@ und alles auf einem Reschaud warmhalten.
 
 \subsection{Orangen-Chile-Butter}
 
-Die Orangen-Chili-Butter ist eins schnelle Topping für Pasta, Baguette oder 
+Die Orangen-Chili-Butter ist ein schnelles Topping für Pasta, Baguette oder 
 Geflügel. Das 
 einfache Rezepte hat eine fantastische 
 Aromatik, eine milde Säure und eine dezente Schärfe.
@@ -477,7 +477,7 @@ Die Butter eine Stunde vor der Zubereitung aus dem Kühlschrank nehmen. Die
 getrocknete Tomate in kleine Stücke schneiden und Zusammen mit den 
 gehackten Kräutern und dem Kaschmir-Chilipulver zu Butter geben und das 
 ganze gut mischen. Mit Salz abschmecken. Die Butter wieder kaltstellen. Nach 
-ca. einer Stunde aus der Kühlung nehmen und je nach Bedarf, in Kugeln, 
+ca. einer Stunde aus der Kühlung nehmen und je nach Bedarf, zu Kugeln, 
 Nocken, einer Rolle oder gar nicht formen. 
 	
 \subsection{Uwe's leckere Orangenmayonnaise}\label{Orangenmayo}
