--- a/Vorlage_Buch.tex
+++ b/Vorlage_Buch.tex
@@ -103,18 +103,18 @@ Guten Appetit und viel Spaß am Rost!
 \tableofcontents
 
 \mainmatter
-\include{Kapitel_1 Grills, Smoker und mehr}%Grills, Smoker
-\include{Kapitel_2 Tierische Gutes}%Tierisch Gut
-\include{Kapitel_3 Gemüse und Pilze}%Gemüse
-\include{Kapitel_4 Leckeres aus dem Holzbackofen}%Leckeres aus dem Holzbackofen
-\include{Kapitel_5 Beilagen und Snacks}%Beilagen
-\include{Kapitel_6 Salate}% Salate
-\include{Kapitel_7 Gewürze, Saucen und Dips}%Gewürze, Saucen und Dips
+\include{Kapitel_1}%Grills, Smoker
+\include{Kapitel_2}%Tierisch Gut
+\include{Kapitel_3}%Gemüse
+\include{Kapitel_4}%Leckeres aus dem Holzbackofen
+\include{Kapitel_5}%Beilagen
+\include{Kapitel_6}% Salate
+\include{Kapitel_7}%Gewürze, Saucen und Dips
 %\include{Kapitel_7}%Dutch oven
 %\include{Kapitel_8}%Holzbackofen
-\include{Kapitel_8 Obst und Desserts}%Desserts
-\include{Kapitel_9 Fleisch Cuts}%Fleischcuts
-\include{Kapitel_10 Helferlein}%Helferlein 
+\include{Kapitel_8}%Desserts
+\include{Kapitel_9}%Fleischcuts
+\include{Kapitel_10}%Helferlein 
  
 
 \end{document}
