Neue Rezepte eingefügt

--- a/Kapitel_2.tex
+++ b/Kapitel_2.tex
@@ -186,7 +186,7 @@ Für die Soße:
 \item 1 EL Tomatenmark
 \item 1 TL Paprikapulver
 \item 1 TL Mehl
-\item 300 ml Schwarzbier (bei Köstritzer Schwarzbier)
+\item 300 ml Schwarzbier (bei mir Köstritzer Schwarzbier)
 \item 300 ml Rinderfond
 \end{itemize}
 \newpage
@@ -240,7 +240,7 @@ sevieren.
 	\begin{minipage}{1\textwidth}
 		\centering
 		\includegraphics[width=1\linewidth]{pics/roastbeefmitkraeuterkruste}
-		\captionof{figure}{Roastbeef vom Keramikgrill}
+		\captionof{figure}{Roastbeef unter der Kräuterkruste vom Gasgrill}
 		\label{fig:roastbeefmitkraeuterkruste}
 	\end{minipage}
 \end{figure}
@@ -354,7 +354,8 @@ Ich bevorzuge dazu einen schönen Shiraz, z.B. Fat Baron 2022.
 \newpage
 
 \subsection{Chili con carne}
-Die Staaten Texas, New Mexico und Arizona erheben Anspruch auf den Ursprung des Chili con carne. Es gibt viele Geschichten über das Urrezept. Unbestritten ist jedoch 
+Die Staaten Texas, New Mexico und Arizona erheben Anspruch auf den Ursprung des Chili con carne. Es gibt viele Geschichten über das 
+Urrezept. Unbestritten ist jedoch 
 der mexikanische Einfluss, in der mexikanischen Küche werden verschiedene 
 Chilisorten eingesetzt um den Geschmack zu variieren.
 
@@ -364,7 +365,7 @@ siehe~\vref{Helles Chili}, das perfekt für die Sommermonate ist.
 
 \subsubsection{Schwarzes Chili}
 Dieses schwarze Chili ist sehr schwer und mit seinem Gewürzen eher für die 
-kalten Herbst- und Wintermonate geeignet. Die schärfe des Chilis ist wie ein 
+kalten Herbst- und Wintermonate geeignet. Die Schärfe des Chilis ist wie ein 
 innerer Ofen und sorgt für eine angenehme Wärme.
 
 \paragraph{Geräte}
@@ -503,7 +504,7 @@ eine kurze Seite legen und die Roulade um die Gurke aufrollen und mit
 Zahnstochern fixieren.
 Die Rouladen mit dem Öl im Dutch oven von allen Seiten dunkelbraun 
 anbraten. Dazu soviel Kohle verwenden wie unter den Dutch oven passen. 
-Die fertig gebratenen Rouladen zu Seite legen. 
+Die fertig gebratenen Rouladen zur Seite legen. 
 Das Tomatenmark im Dutch anbraten, bitte nicht bis es bitter wird. 
 Reichlich Pfeffer, Salz und Paprika, die restlichen Zwiebeln und das 
 Wurzelgemüse dazu geben. Dananch mit der Bratensoße auffüllen und die 
@@ -525,6 +526,48 @@ notwendig.
 \end{figure}
 \newpage
 
+\subsection{Burger, die Königsklasse der Outdoor-Küche}
+Für mich sind die Burger die Königsklasse des Kochens im Freien. Im Gegensatz zu den Burgern ist alles andere nur eine Fingerübung.
+Bei der \glqq Holly Trinity \grqq {} haben wir jeweils nur eine Sorte Fleisch die auf eine besondere Art zubereitet wird. Dabei ist vor allem Geduld gefragt und eine gute Temperatursteuerung. Dafür gibt es allerdings Hilfsmittel, die das übernehmen.
+Die Qualität des Fleisches wird gekauft. Die Würzung ist Geschmackssache und stellt keine  Herausforderung dar, da es fast  für jeden Geschmack etwas zu kaufen gibt. Der Rest ist Technik.
+
+Bei den Burgern stellt es sich anders dar. Da sind viele Komponenten die zusammen das perfekte Ergebnis liefern oder in einer totalen 
+kulinarischen Katastrophe enden können.  Aufzuzählen wären da.
+\begin{description}
+	\item [Die Buns,] die Buns sorgen für die Integrität des Burgers, sie halten alles zusammen. Die Hauptaufgabe der Buns ist in ihrer Textur 
+	luftig zu sein, stabil zu sein und ein schnelles Durchweichen zu verhindern. Darüber hinaus ist der Geschmack der Buns wichtig. Sie müssen 
+	wohlschmeckend sein, mit dem Paddy und dem Belag harmonieren, ohne zu dominant zu sein.
+	\item[Die Paddys] bestehen in der Regel aus Rindfleisch, allerdings auch aus Wild, Geflügel oder Fisch, zudem werden auch vegetarische 
+	oder vegane Versionen angeboten. Die Aufgabe des Paddys ist es die geschmackliche Vorherrschaft zu übernehmen, was eine echte 
+	Herausforderung ist. Es gibt eine Menge Dinge die bei der Zusammenstellung des Fleischblends zu berücksichtigen sind. Das Ziel ist es ein 
+	himmlisches Ergebnis in Mundgefühl, Umami, Aromatik und Harmonie zu erzielen. 
+	Die folgenden Kriterien haben Einfluss auf die Zusammenstellung des Blends.
+	
+		\begin{itemize}[noitemsep]
+			\item Werden die Paddys english gegart
+			\item Ist es das Ziel smashed Burger herzustellen
+			\item Ist der Belag eher deftig oder mild
+			\item Wie soll das Mundgefühl sein
+		\end{itemize}
+	\item [Die Saucen] sollten für weitere Saftigkeit, Geschmeidigkeit, und als geschmackliches Bindemittel für die Buns, den Belag und das 
+	Paddy dienen und alles abrunden. Sie bestimmen Charakter des Burges, wie die folgenden Beispiele zeigen.
+		\begin{itemize}[noitemsep]
+			\item Die Fruchtigkeit des Burgers
+			\item Ist der Burger eher in der Weihnachtszeit anzusiedeln
+			\item Ist der Burger auf einer Motto-Party dem Motto entsprechend kreiert
+			\item Soll der Burger einen regionalen Charakter haben, z.B. Mediterran
+			\item Handelt es sich um einen scharfen Burger
+			\item Gibt es einen Dessertburger (bei dem kein Fleisch-Paddy verwendet werden sollte)
+		\end{itemize}
+	\item [Last but not least] der Belag, Harmoniert der Belag mit der Idee des Burgers, dem Topping des Buns und werden die restlichen 
+	Zutaten unterstützt. Niemals sollten die Belagskomponenten die Vorherrschaft übernehmen und den Burger domnieren. Verantwortlich 
+	sind zum Beispiel, sehr intensive Gemüsesorten, Kräuter oder Gewürze. Ein milder Bacon passt oft besser als ein stark geräucherter und 
+	gewürzter Speck.
+\end{description}
+
+Man kann sagen, dass der Burger das Grillgericht ist an dem man sich richtig austoben kann, es gilt für dieses Gericht mehr als für alle 
+anderen \glqq feel free\grqq{}. 
+
 \section{Schwein}
 
 Es gibt deutlich weniger Schweinerassen als Rinderrassen die zum Grillen 
@@ -541,7 +584,7 @@ BBQ-Szene bekannt und beliebt.
 	Fleisch ist in der gehobenen Gastronomie sehr gefragt.
 	\item[Das Duroc] ist durch seine rot-braune Farbe und Schlappohren 
 	leicht zu erkennen. Der Ursprung dieser Rasse ist nicht eindeutig 
-	geklärt, zu kam sie entweder aus Südamerika mit den Spaniern oder 
+	geklärt, entweder kam sie aus Südamerika mit den Spaniern oder 
 	aus Afrika mit dem Umweg über Amerika. Das dunklere reine 
 	Duroc-Fleisch enthält mehr intramuskuläres Fett und das schmeckt 
 	Ihr auf eurem Teller: Das Fleisch ist feinfaserig, zart und hat einen 
