--- a/Kapitel_4.tex
+++ b/Kapitel_4.tex
@@ -100,7 +100,12 @@ und bei mindestens 300°C im Holzbackofen backen.
 \end{figure}
 \newpage
 
+
 \subsection{Brioche Buns}\label{BriocheBun}
+Die Kunst ist es ein Bun herzustellen, der nicht zäh sondern schön mürbe ist. Er darf aber nicht zu schnell durchsuppen und sollte nicht in der 
+Hand zerbröseln. Diese Eigenschaften in einem Brioche Buns zu vereinen kostet einiges an Experimentierarbeit. Zumal der Bun auch nicht 
+trocken oder strohig werden darf.
+Ich habe hier mein Rezept an ein Rezept aus dem Buch "Burger unser" (erschienen im Callwey Verlag, hier der Link zur in Leder gebunden Limited Edition \url{https://www.callwey.de/buecher/burger-unser-limited-edition/}) angelehnt, das für mich als gelernten Bäcker dem perfekten Brioche Bun  wohl am nächsten kommt.
 
 \paragraph{Geräte}
 
@@ -112,81 +117,91 @@ und bei mindestens 300°C im Holzbackofen backen.
 \paragraph{Zutaten}
 
 \begin{itemize}[noitemsep]
-	\item 3 EL Milch (3,8\% Fett), Zimmertemperatur
-	\item 40 g Rohrzucker
+	\item 3 EL Milch (3,8\% Fett)
+	\item 50 g Rohrzucker
 	\item 380 g Mehl, Type 550
 	\item 1/2 Würfel frische Hefe
 	\item 1 großes Ei
 	\item 35 g warme Butter
-	\item 3 TL Mehl, Type 405
+	\item 45 g Mehl, Type 405
 	\item 9 g Himalaya-Salz
 	\item 240 ml Wasser
 \end{itemize}
 
 \paragraph{Zubereitung}
 
-Milch auf ca. 45°C erwärmen, in eine Schüssel geben 1 EL Zucker und 1 EL Mehl
-zugeben. Die Hefe hinein bröseln und alles verrühren. 10 Minuten stehen lassen
+Milch auf ca. erwärmen nicht erhitzen, in eine Schüssel geben 1 EL Zucker und 1 EL Mehl
+zugeben. Die Hefe hinein bröseln und alles verrühren. Stehen lassen
 bis sich Blasen bilden. 
 Die weiche Butter mit beiden Mehlsorten und Salz mischen bis eine streuselartige
 Masse entsteht. Anschließend die Hefe-Milch-Mischung, Wasser und das Ei
 langsam ein arbeiten. Die Küchenmaschine auf die mittlere Stufe einstellen und 
-den Teig für 6 Minuten kneten. Den Teig abdecken und 1-2 Stunden stehen lassen
+den Teig für ca. 8 Minuten kneten. Den Teig abdecken und 1-2 Stunden stehen lassen
 bis sich das Volumen verdoppelt hat (Stockgare).
 Nach der Stockgare den Teig auf der leicht bemehlten Arbeitsfläche in 8 gleiche Stücke
-teilen. Die 8 Teile in schöne Kugeln formen, auf ein Backblech mit ca. 5 cm Abstand legen
+teilen. Die 8 Teile in schöne Kugeln formen, auf ein Backblech mit genügend Abstand legen
 und eine Stunde liegen lassen, bis das Volumen verdoppelt hat (Stückgare).
 
 Wenn die Buns aufgegangen sind mit einer Mischung aus 1 Eiklar, 1 EL Wasser und einer 
 Prise Salz einstreichen. Dazu einen Silikonpinsel benutzen. Die Buns mit einem beliebigen
-Topping bestreuen und 15-20 Minuten bei 200°C im Holzbackofen backen, bis die 
-Oberfläche goldbraun ist.
+Topping, ich bevorzuge Sesam mit seinem unvergleichlichem nussigen Aroma, bestreuen
+und 15-20 Minuten bei 200°C im Holzbackofen backen, bis die Oberfläche goldbraun ist.
 
 \subsection{Kartoffel-Bun}
+Der Kartoffel-Bun ist in Hinsicht der Luftigkeit und Stabilität die beste Alternative. Dieser 
+Bun wird in den USA und in Kanada als Standard eingesetzt. Dieser Teig ist nicht so leicht 
+wie der Brioche-Teig zu handhaben, ist allerdings deutlich luftiger. Es schmeckt auch 
+weniger süßlich und ist für saftige Burger die erste Wahl. Auch dieses Rezept habe ich
+an ein Rezept aus der selben Quelle wie das des Brioche Buns angelehnt.
 
 \paragraph{Geräte}
 
 \begin{itemize}[noitemsep]
 	\item Holzbackofen
 	\item Kenwood Cooking Chef
+	\item Kartoffelstampfer oder Spätzlepresse
 \end{itemize}
 
 \paragraph{Zutaten}
 
 \begin{itemize}[noitemsep]
 	\item 300 ml Milch (3,8\% Fett)
-	\item 8 g Trockenhefe
+	\item 1/2 Würfel frische Hefe
 	\item 70 g brauner Zucker
-	\item 310 g Mehl, Type 405
+	\item 300g Mehl, Type 405
 	\item 200 g gekochte mehlige Kartoffeln (vom Vortag)
-	\item 250 g Mehl, Ty<pe 550
-	\item 9 g Himalaya-Salz
+	\item 250 g Mehl, Type 550
+	\item 10 g Himalaya-Salz
 	\item 1 großes Ei
 	\item 80 g Butter, weich
 \end{itemize}
 
 \paragraph{Zubereitung}
 
-Die Milch auf ca. 45°C erwärmen, in eine Schüssel geben 1 EL Zucker, 1 EL Mehl
-und die Trockenhefe zugeben und alles verrühren. 10 Minuten stehen lassen
-bis sich Blasen bilden. 
-Die gekochten und geschälten Kartoffeln mit einer Gabel zerdrücken, bis keine groben 
-Stücke mehr vorliegen. Zusammen mit der Hefe-Milch-Mischung, 
+Die Milch auf erwärmen nicht erhitzen, in eine Schüssel geben 1 EL Zucker, 1 EL Mehl
+und die Hefe zugeben und alles verrühren. Stehen lassen bis sich Blasen bilden. 
+
+Die gekochten und geschälten Kartoffeln stampfen, bis keine groben 
+Stücke mehr vorliegen oder durch eine Spätzlepresse drücken, aber niemals mit einem 
+Handmixer verrühren, weil sich dadurch langkettige Moleküle bilden und die Kartoffeln
+ Fäden ziehen. Die Kartoffeln zusammen mit der Hefe-Milch-Mischung, 
 dem gesamten Mehl, dem Zucker, dem Salz und dem Ei in eine Küchenmaschine geben. 
-Auf langsamer Stufe kneten bis ein grober Teig entsteht. Jetzt die Butter nach und nach 
-einarbeiten, dabei die Küchenmaschine auf mittlere Stufe stellen. Anschließend die
-Küchenmaschine auf die höchste Stufe  einstellen und den Teig für 10 Minuten kneten.
-Den Teig in der Schüssel belassen, abdecken und für 1 bis 1,5 Stunden stehen lassen. 
-Das Volumen sollte sich bis dahin verdoppelt haben.
+Auf langsamer Stufe kneten bis ein grober Teig entsteht. 
 
-Den Teig aus der Schüssel nehmen und kneten, dass die Luft entweicht. Dann Teig
-mit einem Nudelholz zu einer rechteckigen Flächen ausrollen und zu einem Zylinder 
-zusammenrollen. Denn Vorgang wiederholen und dann in 12 gleichgroße Stücke teilen.
+Jetzt die Butter nach und nach einarbeiten, dabei die Küchenmaschine auf mittlere Stufe 
+stellen. Anschließend die Küchenmaschine auf die höchste Stufe  einstellen und den 
+Teig für 10 Minuten kneten. Den Teig in der Schüssel belassen, abdecken und für 1 bis 1,5
+Stunden stehen lassen. Das Volumen sollte sich bis dahin verdoppelt haben (Stockgare).
 
-Die 12 Teile in schöne Kugeln formen, auf ein Backblech mit ca. 5 cm Abstand legen
-und eine Stunde liegen lassen, bis sich das Volumen verdoppelt hat (Stückgare).
+Den Teig aus der Schüssel nehmen und gut kneten, dass die Luft entweicht. Den Teig 
+mit den Händen flachdrücken und einschlagen, den Vorgang ein bis zweimal wiederholen.
+Danach in 12 gleichmäßige Teile teilen und zu schönen kompakten Kugeln formen.
+
+Die 12 Kugeln auf ein Backblech mit mit genügend Abstand legen und eine Stunde liegen
+lassen, bis sich das Volumen verdoppelt hat (Stückgare).
 
 Wenn die Buns aufgegangen sind mit einer Mischung aus 1 Eiklar, 1 EL Wasser und einer 
 Prise Salz einstreichen. Dazu einen Silikonpinsel benutzen. Die Buns mit einem beliebigen
-Topping bestreuen und 15-20 Minuten bei 200°C im Holzbackofen backen, bis die 
+Topping, Schwarzkümmel mit ein wenig Salz ist auch ein schmackhaftes Topping mit einer
+tollen Aromatik und 15-20 Minuten bei 200°C im Holzbackofen backen, bis die 
 Oberfläche goldbraun ist.
